# dp2rathena

./: .env.example  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/: FUNDING.yml
dp2rathena/: cli.py  converter.py  item_mapper.py  mob_mapper.py  mob_skill_mapper.py
dp2rathena/db/: item_db.yml  skill_db.yml
tests/: conftest.py  context.py  test_cli.py  test_converter.py  test_item.py  test_item_mapper.py  test_mob_mapper.py  test_mob_skill_mapper.py
tests/fixtures/: 1002_1049.txt  1002_1050.txt  1049_1002.txt  1101_501.txt  item_1101.json  item_1101.yml  item_1101_501.yml  item_1101_nowrap.yml  item_501.yml  item_501_1101.yml  item_501_1101_nowrap.yml  item_900_1101.yml  mob_1002.json  mob_1002.yml  mob_1002_1049.yml  mob_1049.json  mob_1049.yml  mob_1049_1002.yml  mob_1050.json  mob_20355.json  mob_20355.yml  mob_20355_nowrap.yml  mob_skill_1002.txt  mob_skill_1002_1049.txt  mob_skill_1002_1050.txt  mob_skill_1049_1002.txt  mob_skill_1050_1002.txt  mob_skill_3212.txt  mob_skill_schema_1002.json  mob_skill_schema_1049.json
tools/: generate_item_db.py  generate_skill_db.py
