[tool.poetry]
name = "dp2rathena"
version = "0.0.1"
description = "Convert Divine-Pride API data to rAthena YAML"
authors = ["Eric Liu <latiosworks@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
tortilla = "^0.5.0"
PyYAML = "^5.3.1"
click = "^7.1.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
tox = "^3.20.1"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
